prevent horizontal overflow on unbroken words in DesktopItem title

--- a/src/components/DesktopItem.module.css
+++ b/src/components/DesktopItem.module.css
@@ -24,11 +24,14 @@
 
 .desktopItem_title {
   display: -webkit-box;
+  max-width: 100%;
   font-size: 12px;
   text-align: center;
   line-clamp: 2;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+  word-break: break-all;
+  -ms-word-break: break-all;
   overflow: hidden;
   text-overflow: ellipsis;
 }
